# farsight

./: .coverage  .env.example  .gitignore  Dockerfile  Dockerfile.postgres  README.md  docker-compose.yml  pyproject.toml  pytest.ini  setup_data_dirs.py
.cursor/rules/: python.mdc
docker/postgres/: init-pgvector.sql
farsight2/: __init__.py  config.py  constants.py  main.py
farsight2/api/: __init__.py  app.py
farsight2/database/: __init__.py  db.py  init_db.py  models.py  repository.py  repository_factory.py  unified_repository.py
farsight2/document_processing/: __init__.py  document_processor.py  edgar_client.py
farsight2/embedding/: __init__.py  embedder.py  unified_embedding_service.py
farsight2/evaluation/: __init__.py  test_suite.py
farsight2/models/: models.py
farsight2/query_processing/: __init__.py  content_retriever.py  document_selector.py  query_analyzer.py  response_generator.py
farsight2/vector_store/: __init__.py  vector_store.py
resources/: example_filing.html  flow.md  spec.md  taskdescription.md
results/: query_log_20250320_105141.txt  query_log_20250320_153413.txt  query_log_20250320_153429.txt  query_results_20250320_105141.json
scripts/: load_companies.sh  reset_all.sh  reset_db.sh  run_dev.sh  run_prod.sh  run_queries.py  run_tests.sh  stop.sh  test_db_connection.py
tests/: README.md  conftest.py  run_queries.py  test_query_analyzer.py  test_questions.csv
tests/integration/: test_document_workflow.py
tests/results/: query_log_20250320_154358.txt  query_results_20250320_154358.json
tests/unit/: test_database.py  (+4 more)
(+1 files in other folders)
