[tool.poetry]
name = "farsight2"
version = "0.1.0"
description = "10-K/10-Q Digestion and Retrieval System"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"
openai = "^1.3.0"
requests = "^2.31.0"
numpy = "2.2.3"
pydantic = "^2.4.2"
python-dotenv = "^1.0.0"
beautifulsoup4 = "^4.12.2"
html2text = "^2020.1.16"
psycopg2-binary = "^2.9.9"
sqlalchemy = "^2.0.23"
pgvector = "^0.2.3"
alembic = "^1.12.1"
autoflake = "^2.3.1"
pytest-cov = "^6.0.0"
pandas = "^2.2.3"
ruff = "^0.11.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.10.0"
isort = "^5.12.0"
mypy = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
farsight2 = "farsight2.main:main"
